CREATE EXTENSION IF NOT EXISTS vector;
CREATE TABLE IF NOT EXISTS users (id integer PRIMARY KEY, open_id text NOT NULL UNIQUE, role text NOT NULL, created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE IF NOT EXISTS customers (id uuid PRIMARY KEY, name text NOT NULL, segment text NOT NULL, region text NOT NULL, created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE IF NOT EXISTS support_tickets (id uuid PRIMARY KEY, customer_id uuid REFERENCES customers(id), priority text NOT NULL, status text NOT NULL, product_area text NOT NULL, created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE IF NOT EXISTS transactions (id uuid PRIMARY KEY, customer_id uuid REFERENCES customers(id), amount numeric(14,2) NOT NULL, status text NOT NULL, occurred_at timestamptz NOT NULL);
CREATE TABLE IF NOT EXISTS invoices (id uuid PRIMARY KEY, customer_id uuid REFERENCES customers(id), amount numeric(14,2) NOT NULL, status text NOT NULL, due_at timestamptz NOT NULL);
CREATE TABLE IF NOT EXISTS campaigns (id uuid PRIMARY KEY, name text NOT NULL, region text NOT NULL, spend numeric(14,2) NOT NULL, conversions integer NOT NULL);
CREATE TABLE IF NOT EXISTS product_events (id uuid PRIMARY KEY, campaign_id uuid REFERENCES campaigns(id), customer_id uuid REFERENCES customers(id), event_name text NOT NULL, occurred_at timestamptz NOT NULL);
CREATE TABLE IF NOT EXISTS incidents (id uuid PRIMARY KEY, service text NOT NULL, severity text NOT NULL, status text NOT NULL, summary text NOT NULL, occurred_at timestamptz NOT NULL);
CREATE TABLE IF NOT EXISTS documents (id uuid PRIMARY KEY, title text NOT NULL, source text NOT NULL, metadata jsonb NOT NULL DEFAULT '{}');
CREATE TABLE IF NOT EXISTS document_chunks (id uuid PRIMARY KEY, document_id uuid REFERENCES documents(id) ON DELETE CASCADE, section text NOT NULL, content text NOT NULL, embedding vector(1536));
CREATE TABLE IF NOT EXISTS tool_registry (name text PRIMARY KEY, interface text NOT NULL, required_role text NOT NULL, enabled boolean NOT NULL DEFAULT true, schema jsonb NOT NULL DEFAULT '{}');
CREATE TABLE IF NOT EXISTS api_key_roles (key_hash text PRIMARY KEY, role text NOT NULL, created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE IF NOT EXISTS agent_runs (id uuid PRIMARY KEY, user_id integer NOT NULL REFERENCES users(id), agent_version text NOT NULL, trace_id text NOT NULL UNIQUE, status text NOT NULL, created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE IF NOT EXISTS tool_calls (id uuid PRIMARY KEY, run_id uuid REFERENCES agent_runs(id) ON DELETE CASCADE, tool_name text NOT NULL, arguments jsonb NOT NULL, output jsonb, status text NOT NULL, latency_ms integer);
CREATE TABLE IF NOT EXISTS generated_reports (id uuid PRIMARY KEY, title text NOT NULL, body text NOT NULL, trace_id text NOT NULL, created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE IF NOT EXISTS evaluation_runs (id uuid PRIMARY KEY, agent_version text NOT NULL, status text NOT NULL, created_at timestamptz NOT NULL DEFAULT now());
CREATE TABLE IF NOT EXISTS evaluation_results (id uuid PRIMARY KEY, evaluation_run_id uuid REFERENCES evaluation_runs(id) ON DELETE CASCADE, case_id text NOT NULL, tool_accuracy numeric, groundedness numeric, task_success boolean, latency_ms integer);
CREATE TABLE IF NOT EXISTS audit_logs (id uuid PRIMARY KEY, user_id integer REFERENCES users(id), action text NOT NULL, resource text NOT NULL, detail jsonb NOT NULL DEFAULT '{}', created_at timestamptz NOT NULL DEFAULT now());
CREATE INDEX IF NOT EXISTS document_chunks_embedding_idx ON document_chunks USING ivfflat (embedding vector_cosine_ops);
CREATE INDEX IF NOT EXISTS tickets_status_priority_idx ON support_tickets(status, priority);
CREATE INDEX IF NOT EXISTS transactions_occurred_idx ON transactions(occurred_at);
